Tweaked singlerod SIZE file & can compile Nek single-physics driver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,3 +103,6 @@ add_executable(test_coupled_api tests/api_tests/test_coupled_api.cpp)
 target_link_libraries(test_coupled_api PUBLIC libstream)
 
 add_executable(comm_split_demo tests/comm_split_demo/main.cpp)
+
+add_executable(test_nek5000_singlerod tests/singlerod/short/test_nek5000.cpp)
+target_link_libraries(test_nek5000_singlerod PUBLIC libstream)
