--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ download:cross_sections:
   script:
     - wget https://anl.box.com/shared/static/a6sw2cep34wlz6b9i9jwiotaqoayxcxt.xz -O - | tar -C $CI_PROJECT_DIR -xvJ
 
-test_api:openmc_api:
+test_api:openmc:
   stage: test_api
   dependencies:
     - download:cross_sections
@@ -68,9 +68,27 @@ test_singlerod:nek5000:
     FC: mpif90
   script:
     - cd tests/singlerod/short
-    - patch -N rodcht.rea ci_config/rodcht_rea.diff
-    - patch -N SIZE ci_config/SIZE.diff
+    - patch -N rodcht.rea ci_config/rodcht_rea.diff || true
+    - patch -N SIZE ci_config/SIZE.diff || true
     # - cmake -DCMAKE_Fortran_FLAGS="-mcmodel=large" ../../../
     - cmake ../../../
     - make -j -l4 test_nek5000_singlerod
     - mpirun -np 8 ./test_nek5000_singlerod
+
+test_singlerod:openmc:
+  stage: test_singlerod
+  dependencies:
+    - download:cross_sections
+  variables:
+    GIT_STRATEGY: none
+    CC: mpicc
+    CXX: mpicxx
+    FC: mpif90
+    OPENMC_CROSS_SECTIONS: $CI_PROJECT_DIR/nndc_hdf5/cross_sections.xml
+    OMP_NUM_THREADS: 4
+  script:
+    - cd tests/singlerod/short
+    - patch -N rodcht.rea ci_config/rodcht_rea.diff || true
+    - patch -N SIZE ci_config/SIZE.diff || true
+    - make -j -l4 test_openmc_singlerod
+    - mpirun -np 2 ./test_openmc_singlerod
