--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,3 +106,6 @@ add_executable(comm_split_demo tests/comm_split_demo/main.cpp)
 
 add_executable(test_nek5000_singlerod tests/singlerod/short/test_nek5000.cpp)
 target_link_libraries(test_nek5000_singlerod PUBLIC libstream)
+
+add_executable(test_openmc_singlerod tests/singlerod/short/test_openmc.cpp)
+target_link_libraries(test_openmc_singlerod PUBLIC libstream)
