Moved parts of nek_interface to libnek5000

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,3 +109,6 @@ target_link_libraries(test_nek5000_singlerod PUBLIC libstream)
 
 add_executable(test_openmc_singlerod tests/singlerod/short/test_openmc.cpp)
 target_link_libraries(test_openmc_singlerod PUBLIC libstream)
+
+add_executable(test_coupled_singlerod tests/singlerod/short/test_coupled.cpp)
+target_link_libraries(test_coupled_singlerod PUBLIC libstream)
