--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,7 @@ test_api:coupled_driver:
     - cmake -DCASENAME=ethier ../../
     - make -j -l4 test_coupled_api
     - mpirun -np 8 ./test_coupled_api
+  allow_failure: true
 
 test_singlerod:nek5000:
   stage: test_singlerod
@@ -92,3 +93,22 @@ test_singlerod:openmc:
     - patch -N SIZE ci_config/SIZE.diff || true
     - make -j -l4 test_openmc_singlerod
     - mpirun -np 2 ./test_openmc_singlerod
+
+test_singlerod:coupled:
+  stage: test_singlerod
+  dependencies:
+    - download:cross_sections
+  variables:
+    GIT_STRATEGY: none
+    CC: mpicc
+    CXX: mpicxx
+    FC: mpif90
+    OPENMC_CROSS_SECTIONS: $CI_PROJECT_DIR/nndc_hdf5/cross_sections.xml
+    OMP_NUM_THREADS: 4
+  script:
+    - cd tests/singlerod/short
+    - patch -N rodcht.rea ci_config/rodcht_rea.diff || true
+    - patch -N SIZE ci_config/SIZE.diff || true
+    - make -j -l4 test_coupled_singlerod
+    - mpirun -np 8 ./test_coupled_singlerod
+  allow_failure: true
