--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,3 +62,19 @@ test_singlerod:coupled:
     - patch -N SIZE ci_config/SIZE.diff || true
     - make -j -l4 test_coupled_singlerod
     - mpirun -np 8 ./test_coupled_singlerod
+
+test_singlerod:surrogate:
+  stage: test_singlerod
+  dependencies:
+    - download:cross_sections
+  variables:
+    GIT_STRATEGY: none
+    CC: mpicc
+    CXX: mpicxx
+    FC: mpif90
+    OPENMC_CROSS_SECTIONS: $CI_PROJECT_DIR/nndc_hdf5/cross_sections.xml
+    OMP_NUM_THREADS: 4
+  script:
+    - cd tests/singlerod/short
+    - make -j -l4 stream
+    - mpirun -np 8 ./stream
