--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set(SOURCES
 if (SCALE_FOUND)
     list(APPEND SOURCES
         src/smrt/Assembly_Model.cpp
+        src/smrt/Coupled_Solver.cpp
         src/smrt/Multiphysics_Driver.cpp
         src/smrt/Multi_Pin_Conduction.cpp
         src/smrt/Multi_Pin_Subchannel.cpp
