--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,28 @@
 stages:
-  - download
+  - setup
+  - build_singlerod
   - test_singlerod
 
 download:cross_sections:
-  stage: download
+  stage: setup
   variables:
     GIT_STRATEGY: clone
   script:
     - wget https://anl.box.com/shared/static/a6sw2cep34wlz6b9i9jwiotaqoayxcxt.xz -O - | tar -C $CI_PROJECT_DIR -xvJ
 
-test_singlerod:nek5000:
-  stage: test_singlerod
+input_patch:nek5000:
+  stage: setup
+  variables:
+    GIT_STRATEGY: none
+  script:
+    - cd tests/singlerod/short
+    - patch -N rodcht.rea ci_config/rodcht_rea.diff || true
+    - patch -N SIZE ci_config/SIZE.diff || true
+
+build_singlerod:stream:
+  stage: build_singlerod
   dependencies:
-    - download:cross_sections
+    - input_patch:nek5000
   variables:
     GIT_STRATEGY: none
     CC: mpicc
@@ -20,63 +30,62 @@ test_singlerod:nek5000:
     FC: mpif90
   script:
     - cd tests/singlerod/short
-    - patch -N rodcht.rea ci_config/rodcht_rea.diff || true
-    - patch -N SIZE ci_config/SIZE.diff || true
-    # - cmake -DCMAKE_Fortran_FLAGS="-mcmodel=large" ../../../
     - cmake ../../../
+    - make -j -l4 stream
     - make -j -l4 test_nek5000_singlerod
+    - make -j -l4 test_openmc_singlerod
+
+test_singlerod:nek5000:
+  stage: test_singlerod
+  dependencies:
+    - input_patch:nek5000
+    - build_singlerod:stream
+  variables:
+    GIT_STRATEGY: none
+  script:
+    - cd tests/singlerod/short/openmc_nek5000
     - if [ -a rodcht.run01.gz ]; then gunzip -f rodcht.run01.gz ; fi
-    - mpirun -np 8 ./test_nek5000_singlerod
+    - echo -e "rodcht\n$(pwd)" > SESSION.NAME
+    - mpirun -np 8 ../test_nek5000_singlerod
 
 test_singlerod:openmc:
   stage: test_singlerod
   dependencies:
     - download:cross_sections
+    - build_singlerod:stream
   variables:
     GIT_STRATEGY: none
-    CC: mpicc
-    CXX: mpicxx
-    FC: mpif90
     OPENMC_CROSS_SECTIONS: $CI_PROJECT_DIR/nndc_hdf5/cross_sections.xml
     OMP_NUM_THREADS: 4
   script:
-    - cd tests/singlerod/short
-    - patch -N rodcht.rea ci_config/rodcht_rea.diff || true
-    - patch -N SIZE ci_config/SIZE.diff || true
-    - make -j -l4 test_openmc_singlerod
-    - mpirun -np 2 ./test_openmc_singlerod
+    - cd tests/singlerod/short/openmc_nek5000
+    - mpirun -np 2 ../test_openmc_singlerod
 
-test_singlerod:coupled:
+test_singlerod:openmc_nek5000:
   stage: test_singlerod
   dependencies:
     - download:cross_sections
+    - input_patch:nek5000
+    - build_singlerod:stream
   variables:
     GIT_STRATEGY: none
-    CC: mpicc
-    CXX: mpicxx
-    FC: mpif90
     OPENMC_CROSS_SECTIONS: $CI_PROJECT_DIR/nndc_hdf5/cross_sections.xml
     OMP_NUM_THREADS: 4
   script:
-    - cd tests/singlerod/short
-    - patch -N rodcht.rea ci_config/rodcht_rea.diff || true
-    - patch -N SIZE ci_config/SIZE.diff || true
-    - make -j -l4 test_coupled_singlerod
+    - cd tests/singlerod/short/openmc_nek5000
     - if [ -a rodcht.run01.gz ]; then gunzip -f rodcht.run01.gz ; fi
-    - mpirun -np 8 ./test_coupled_singlerod
+    - echo -e "rodcht\n$(pwd)" > SESSION.NAME
+    - mpirun -np 8 ../stream
 
-test_singlerod:surrogate:
+test_singlerod:openmc_heat_surrogate:
   stage: test_singlerod
   dependencies:
     - download:cross_sections
+    - build_singlerod:stream
   variables:
     GIT_STRATEGY: none
-    CC: mpicc
-    CXX: mpicxx
-    FC: mpif90
     OPENMC_CROSS_SECTIONS: $CI_PROJECT_DIR/nndc_hdf5/cross_sections.xml
     OMP_NUM_THREADS: 4
   script:
-    - cd tests/singlerod/short
-    - make -j -l4 stream
-    - mpirun -np 8 ./stream
+    - cd tests/singlerod/short/openmc_heat_surrogate
+    - mpirun -np 2 ../stream
