Adding new vis files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ add_library(libstream
     src/openmc_interface.cpp
     src/openmc_nek_driver.cpp
     src/nek_driver.cpp
+    src/vtk_viz.cpp
     src/openmc_heat_driver.cpp)
 set_target_properties(libstream PROPERTIES OUTPUT_NAME stream)
 target_link_libraries(libstream PUBLIC libnek5000 libopenmc xtensor heat_xfer pugixml gsl-lite)
