Added base class for coupled neutronics-TH solve and introduced inheritance to OpenmcHeatDriver class. Refs #14

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ target_include_directories(heat_xfer PUBLIC vendor/surrogates/)
 
 set(SOURCES
     src/driver.cpp
+    src/coupled_driver.cpp
     src/heat_driver.cpp
     src/message_passing.cpp
     src/openmc_driver.cpp
