--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 variables:
-  GIT_STRATEGY: none
+  GIT_STRATEGY: clone
+  GIT_SUBMODULE_STRATEGY: recursive
   OPENMC_CROSS_SECTIONS: $CI_PROJECT_DIR/endf71_multitemp/cross_sections.xml
 
 stages:
@@ -10,13 +11,14 @@ stages:
 download:cross_sections:
   stage: setup
   variables:
-    GIT_STRATEGY: clone
-    GIT_SUBMODULE_STRATEGY: normal
+    GIT_STRATEGY: none
   script:
     - wget https://anl.box.com/shared/static/46osfq56h4bd68r6e6pbhupsk4gbnvj2.xz -O - | tar -C $CI_PROJECT_DIR -xvJ
 
 input_patch:nek5000:
   stage: setup
+  variables:
+    GIT_STRATEGY: none
   script:
     - cd tests/singlerod/short
     - patch -N rodcht.rea ci_config/rodcht_rea.diff || true
@@ -27,6 +29,7 @@ build_singlerod:enrico:
   dependencies:
     - input_patch:nek5000
   variables:
+    GIT_STRATEGY: none
     CC: mpicc
     CXX: mpicxx
     FC: mpif90
@@ -40,6 +43,8 @@ build_singlerod:enrico:
 
 test_singlerod:nek5000:
   stage: test_singlerod
+  variables:
+    GIT_STRATEGY: none
   dependencies:
     - input_patch:nek5000
     - build_singlerod:enrico
@@ -54,6 +59,7 @@ test_singlerod:openmc:
     - download:cross_sections
     - build_singlerod:enrico
   variables:
+    GIT_STRATEGY: none
     OMP_NUM_THREADS: 4
   script:
     - cd tests/singlerod/short/openmc_nek5000
@@ -66,6 +72,7 @@ test_singlerod:openmc_nek5000:
     - input_patch:nek5000
     - build_singlerod:enrico
   variables:
+    GIT_STRATEGY: none
     OMP_NUM_THREADS: 4
   script:
     - cd tests/singlerod/short/openmc_nek5000
@@ -78,6 +85,7 @@ test_singlerod:openmc_heat_surrogate:
     - download:cross_sections
     - build_singlerod:enrico
   variables:
+    GIT_STRATEGY: none
     OMP_NUM_THREADS: 4
   script:
     - cd tests/singlerod/short/openmc_heat_surrogate
