Changed Gitlab CI GIT_STRATEGY

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,23 @@
 variables:
-  GIT_STRATEGY: clone
+  GIT_STRATEGY: none
   GIT_SUBMODULE_STRATEGY: recursive
   OPENMC_CROSS_SECTIONS: $CI_PROJECT_DIR/endf71_multitemp/cross_sections.xml
 
 stages:
-  - setup
+  - download
+  - patch
   - build_singlerod
   - test_singlerod
 
 download:cross_sections:
-  stage: setup
+  stage: download
   variables:
-    GIT_STRATEGY: none
+    GIT_STRATEGY: fetch
   script:
     - wget https://anl.box.com/shared/static/46osfq56h4bd68r6e6pbhupsk4gbnvj2.xz -O - | tar -C $CI_PROJECT_DIR -xvJ
 
 input_patch:nek5000:
-  stage: setup
-  variables:
-    GIT_STRATEGY: none
+  stage: patch
   script:
     - cd tests/singlerod/short
     - patch -N rodcht.rea ci_config/rodcht_rea.diff || true
@@ -29,7 +28,6 @@ build_singlerod:enrico:
   dependencies:
     - input_patch:nek5000
   variables:
-    GIT_STRATEGY: none
     CC: mpicc
     CXX: mpicxx
     FC: mpif90
@@ -43,8 +41,6 @@ build_singlerod:enrico:
 
 test_singlerod:nek5000:
   stage: test_singlerod
-  variables:
-    GIT_STRATEGY: none
   dependencies:
     - input_patch:nek5000
     - build_singlerod:enrico
@@ -59,7 +55,6 @@ test_singlerod:openmc:
     - download:cross_sections
     - build_singlerod:enrico
   variables:
-    GIT_STRATEGY: none
     OMP_NUM_THREADS: 4
   script:
     - cd tests/singlerod/short/openmc_nek5000
@@ -72,7 +67,6 @@ test_singlerod:openmc_nek5000:
     - input_patch:nek5000
     - build_singlerod:enrico
   variables:
-    GIT_STRATEGY: none
     OMP_NUM_THREADS: 4
   script:
     - cd tests/singlerod/short/openmc_nek5000
@@ -85,7 +79,6 @@ test_singlerod:openmc_heat_surrogate:
     - download:cross_sections
     - build_singlerod:enrico
   variables:
-    GIT_STRATEGY: none
     OMP_NUM_THREADS: 4
   script:
     - cd tests/singlerod/short/openmc_heat_surrogate
