Renamed heat_driver.h --> surrogate_heat_driver.h (likewise for *.cpp)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ target_include_directories(heat_xfer PUBLIC vendor/surrogates/)
 set(SOURCES
     src/driver.cpp
     src/coupled_driver.cpp
-    src/heat_driver.cpp
+    src/surrogate_heat_driver.cpp
     src/message_passing.cpp
     src/openmc_driver.cpp
     src/cell_instance.cpp
