--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: cpp
 sudo: required
-dist: bionic
-addons:
-  apt:
-    packages:
-      - gfortran
-      - mpich
-      - libmpich-dev
-      - libhdf5-mpich-dev
-    config:
-      retries: true
+dist: xenial
+# addons:
+#   apt:
+#     packages:
+#       - gfortran
+#       - mpich
+#       - libmpich-dev
+#       - libhdf5-mpich-dev
+#     config:
+#       retries: true
 cache:
   directories:
     - $HOME/nndc_hdf5
@@ -25,6 +25,8 @@ env:
     - OPENMC_ENDF_DATA=$HOME/endf-b-vii.1
 
 before_script:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y gfortran mpich libmpich-dev libhdf5-mpich-dev
   - bash vendor/openmc/tools/ci/download-xs.sh
   - bash ci/patch_singlerod_rea.sh
 
