--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,8 @@ set(SOURCES
     src/openmc_nek_driver.cpp
     src/nek_driver.cpp
     src/vtk_viz.cpp
-    src/openmc_heat_driver.cpp)
+    src/openmc_heat_driver.cpp
+    src/heat_fluids_driver.cpp)
 
 if (SCALE_FOUND)
     list(APPEND SOURCES
