Fix for BG/Q compiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.3)
 project(enrico Fortran C CXX)
 
+# On BG/Q, linking requires -dynamic, not -rdynamic
+if (CMAKE_HOST_SYSTEM_PROCESSOR STREQUAL "ppc64")
+  set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-dynamic")
+endif ()
+
 # =============================================================================
 # Check for SCALE (optional)
 # =============================================================================
