Renamed vendor/gsl -> vendor/gsl-lite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ endif ()
 # =============================================================================
 add_subdirectory(vendor/nek5000)
 add_subdirectory(vendor/openmc)
-add_subdirectory(vendor/gsl)
+add_subdirectory(vendor/gsl-lite)
 
 # =============================================================================
 # IAPWS Correlations
