Added gsl-lite v0.32.0 submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = vendor/nek5000
 	url = https://github.com/enrico-dev/Nek5000.git
 	branch = enrico
+[submodule "vendor/gsl-lite"]
+	path = vendor/gsl-lite
+	url = https://github.com/martinmoene/gsl-lite.git
+	branch = v0.32.0
